# Energy_Aware_Coverage_ROS2

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: params.yaml
launch/: coverage_system.launch.py
sar_coverage/: __init__.py  coverage_node.py  energy_aware_coverage.py
scripts/: dummy_odom.py  dummy_odom_with_docking.py  launch_simulation.bash  test_battery_simple.py
